# model-template

./: README.md
.github/workflow/: deploy.yml
model_template/: Dockerfile  Makefile  pyproject.toml
model_template/data/.dvc/: config
model_template/infra/: Pulumi.yaml  index.ts  package-lock.json  package.json
model_template/mlruns/0/: meta.yaml
model_template/src/model_template/serving/: main.py
model_template/src/model_template/training/: train.py
model_template/tests/: test_model_template.py
